Переписана архитектура, предмет теперь существует только в рамках семестра